Add docs, banner, PyRosetta helpers, and MCP enhancements

--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "modeling",
     "bioinformatics"
   ],
-  "author": "Your Name",
+  "author": "Ariel Ben-Sasson",
   "license": "MIT",
   "dependencies": {},
   "engines": {
